# py_simple_go_icp_interface

./: .gitignore  README.md  pyproject.toml
py_simple_go_icp_interface/: __init__.py  check.py  compile.py  evaluation.py  main.py  make_input.py  run_cmd.py  test_data.py  utils.py
