[project]
name = "py-simple-go-icp-interface"
version = "0.1.3"
description = "A simple python encapsulation of Go-ICP."
authors = [
    {name = "GGN_2015",email = "neko@jlulug.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "cpp_simple_interface",
    "is_windows_system",
    "live_chrono"
]

[tool.poetry]
include = [
    "py_simple_go_icp_interface/Go-ICP/*"
]
exclude = [
    "py_simple_go_icp_interface/*.exe",
    "py_simple_go_icp_interface/*.out"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
